--- a/data/sample.html
+++ b/data/sample.html
@@ -16,10 +16,10 @@
   <div class="txt">
     <h1>文章</h1>
       <div id = "text_1">
-        <p>これはidがtext_1の本文です．</p>
+        <p>これはidがtext_1の文章です．<br>この直前に改行記号があります．</p>
       </div>
       <div id = "text_2">
-        <p>これはidがtext_2の本文です．</p>
+        <p>これはidがtext_2の文章です．  この直前には半角スペースがあります．</p>
       </div>
   </div>
 
@@ -29,19 +29,12 @@
         <table border = 1>
          <caption>mpgのデータ</caption>
          <thead>
-          <tr>
-           <th> manufacturer</th> <th>model</th> <th>displ</th> <th>year</th> <th>cyl</th>
-          </tr>
-         </thead>
+            <tr><th>manufacturer</th><th>model</th><th>displ</th><th>year</th><th>cyl</th></tr>
+        </thead>
         <tbody>
-          <tr>
-           <td>audi</td> <td>a4</td> <td>1.8</td> <td>1999</td> <td>4</td>
-          </tr>
-          <tr>
-           <td>audi</td> <td>a4</td> <td>1.8</td> <td>1999</td> <td>4</td> </tr>
-          <tr>
-           <td>audi</td> <td>a4</td> <td>2.0</td> <td>2008</td> <td>4 </td>
-          </tr>
+          <tr><td>audi</td><td>a4</td><td>1.8</td><td>1999</td><td>4</td></tr>
+          <tr><td>audi</td><td>a4</td><td>1.8</td><td>1999</td><td>4</td></tr>
+          <tr><td>audi</td><td>a4</td><td>2.0</td><td>2008</td><td>4</td></tr>
         </tbody>
         </table>
       </div>
@@ -56,15 +49,9 @@
           </tr>
          </thead>
         <tbody>
-          <tr>
-           <td> 5.1</td> <td>3.5</td> <td>1.4</td> <td>0.2</td> <td>setosa</td>
-          </tr>
-          <tr>
-           <td> 4.9</td> <td>3.0</td> <td>1.4</td> <td>0.2</td> <td>setosa</td>
-          </tr>
-          <tr>
-           <td> 4.7</td> <td>3.2</td> <td>1.3</td> <td>0.2</td> <td>setosa</td>
-          </tr>
+          <tr><td> 5.1</td> <td>3.5</td> <td>1.4</td> <td>0.2</td> <td>setosa</td></tr>
+          <tr><td> 4.9</td> <td>3.0</td> <td>1.4</td> <td>0.2</td> <td>setosa</td></tr>
+          <tr><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td><td>setosa</td></tr>
         </tbody>
         </table>
 
