--- a/data/sample.html
+++ b/data/sample.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>HTMLの例</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="sample.js"></script>
 </head>
 <body>
   <div class="header">ヘッダーの部分
@@ -19,7 +17,7 @@
         <p>これはidがtext_1の文章です．<br>この直前に改行記号があります．</p>
       </div>
       <div id = "text_2">
-        <p>これはidがtext_2の文章です．  この直前には半角スペースがあります．</p>
+        <p>これはidがtext_2の文章です．   この直前には半角スペースが2つあります．</p>
       </div>
   </div>
 
