--- a/data/sample.html
+++ b/data/sample.html
@@ -21,6 +21,44 @@
       </div>
   </div>
 
+    <h1>春の七草</h1>
+      <div class="list">
+        <select id="spring_species">
+        <option>セリ</option>
+        <option>ナズナ</option>
+        <option>ゴギョウ</option>
+        <option>ハコベラ</option>
+        <option>ホトケノザ</option>
+        <option>スズナ</option>
+        <option>スズシロ</option>
+        </select>
+  </div>
+
+  <div class="list">
+    <h1>秋の七種</h1>
+      <ul id="autumn_species">
+        <li>ハギ</li>
+        <li>ススキ</li>
+        <li>クズ</li>
+        <li>カワラナデシコ</li>
+        <li>オミナエシ </li>
+        <li>フジバカマ</li>
+        <li>キキョウ</li>
+      </ul> 
+  </div>
+
+  <div class="img">
+    <h1>画像1</h1>
+      <div id = "image_1">
+        <img src="r-01.jpg" width="10%">
+      </div>
+
+    <h1>画像2</h1>
+      <div id = "image_2">
+        <img src="r-02.jpg" width="10%">
+      </div>
+    </div>
+
   <div class="tbl">
     <h1>表1</h1>
       <div id = "table_1">
@@ -53,44 +91,6 @@
         </tbody>
         </table>
 
-      </div>
-    </div>
-
-    <h1>春の七草</h1>
-      <div class="txt">
-        <select id="spring_species">
-        <option>セリ</option>
-        <option>ナズナ</option>
-        <option>ゴギョウ</option>
-        <option>ハコベラ</option>
-        <option>ホトケノザ</option>
-        <option>スズナ</option>
-        <option>スズシロ</option>
-        </select>
-  </div>
-
-  <div class="txt">
-    <h1>秋の七種</h1>
-      <ul id="autumn_species">
-        <li>ハギ</li>
-        <li>ススキ</li>
-        <li>クズ</li>
-        <li>カワラナデシコ</li>
-        <li>オミナエシ </li>
-        <li>フジバカマ</li>
-        <li>キキョウ</li>
-      </ul> 
-  </div>
-
-  <div class="img">
-    <h1>画像1</h1>
-      <div id = "image_1">
-        <img src="r-01.jpg" width="10%">
-      </div>
-
-    <h1>画像2</h1>
-      <div id = "image_2">
-        <img src="r-02.jpg" width="10%">
       </div>
     </div>
 
