--- a/data/sample.html
+++ b/data/sample.html
@@ -15,7 +15,7 @@
       <p>idがtext_1の本文です．<br>直前は改行記号です．</p>
     </div>
     <div id = "text_2">
-      <p>idがtext_2の本文です．  この直前は半角スペース2つです</p>
+      <p>idがtext_2の本文です．  直前は半角スペース2つです</p>
     </div>
 </div>
 <div class="tbl">
@@ -38,7 +38,7 @@
       <table border = 1>
         <caption>irisのデータ</caption>
         <thead>
-          <tr><th>S.L</th> <th>S.W</th><th>P.L</th><th>P.W</th><th>Sp</th></tr>
+          <tr><th>S.L</th><th>S.W</th><th>P.L</th><th>P.W</th><th>Sp</th></tr>
         </thead>
         <tbody>
           <tr><td>5.1</td><td>3.5</td><td>1.4</td><td>0.2</td><td>setosa</td></tr>
@@ -49,25 +49,25 @@
     </div>
   </div>
   <h1>春の七草</h1>
-    <div class="txt">
+    <div class="txt list">
       <select id="spring_species">
         <option>セリ</option><option>ナズナ</option><option>ゴギョウ</option>
         <option>ハコベラ</option><option>ホトケノザ</option>
-        <option>スズナ</option> <option>スズシロ</option>
+        <option>スズナ</option><option>スズシロ</option>
       </select>
 </div>
-<div class="txt">
+<div class="txt list">
   <h1>秋の七種</h1>
     <ul id="autumn_species">
-      <li>ハギ</li> <li>ススキ</li> <li>クズ</li> <li>カワラナデシコ</li>
-      <li>オミナエシ </li> <li>フジバカマ</li> <li>キキョウ</li>
+      <li>ハギ</li><li>ススキ</li><li>クズ</li><li>カワラナデシコ</li>
+      <li>オミナエシ </li><li>フジバカマ</li><li>キキョウ</li>
     </ul> 
 </div>
 <div class="img">
   <h1>画像1</h1>
-    <div id = "image_1"> <img src="r-01.jpg" width="10%"> </div>
+    <div id = "image_1"><img src="r-01.jpg" width="10%"></div>
   <h1>画像2</h1>
-    <div id = "image_2"> <img src="r-02.jpg" width="10%"> </div>
+    <div id = "image_2"><img src="r-02.jpg" width="10%"></div>
   </div>
 <hr>
   <div class="footer">
