--- a/data/sample.html
+++ b/data/sample.html
@@ -65,9 +65,9 @@
 </div>
 <div class="img">
   <h1>画像1</h1>
-    <div id = "image_1"><img src="r-01.jpg" width="10%"></div>
+    <div id = "image_turtle"><img src="image_01.jpg" width="10%"></div>
   <h1>画像2</h1>
-    <div id = "image_2"><img src="r-02.jpg" width="10%"></div>
+    <div id = "image_R"><img src="r_07.png" width="10%"></div>
   </div>
 <hr>
   <div class="footer">
